<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/upload" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/appointments"
            android:title="@string/appointments" />
        <item
            android:id="@+id/forecastWeather"
            android:icon="@drawable/sunny"
            android:title="@string/forecasts" />
    </group>

</menu>
